--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/respond.py", "use": "@vercel/python" },
-    { "src": "app.py", "use": "@vercel/python" }
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-    { "src": "/api/respond", "dest": "/api/respond.py" },
-    { "src": "/(.*)", "dest": "/app.py" }
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
   ]
 }
